--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: Folke Lemaitre
 subtitle:
 description:
 author: Folke Lemaitre
-author_title: Entrepreneur
+author_title: Tech Entrepreneur
 avatar: assets/images/avatar.jpg
 location: San Francisco
 follow: https://github.com/folke/
